Getting there parsing is kinda working need to write my mips code and my register holder and clean up expressions. Then Simple Expressions will work?

--- a/calc/CMakeLists.txt
+++ b/calc/CMakeLists.txt
@@ -3,7 +3,6 @@ project(calc)
 
 find_package(BISON)
 find_package(FLEX)
-
 bison_target(Parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cpp)
 flex_target(Scanner scanner.l ${CMAKE_CURRENT_BINARY_DIR}/scanner.cpp)
 add_flex_bison_dependency(Scanner Parser)
@@ -12,13 +11,33 @@ set(EXTRA_COMPILE_FLAGS "-g3 -std=c++14")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_COMPILE_FLAGS}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
+set(HEADER_HPP
+	Global.hpp
+	Expression.hpp
+	ArrayType.hpp
+	Operations.hpp
+	RecordType.hpp
+	SimpleType.hpp
+	SymbolTable.hpp
+	Type.hpp
+	)
+
+set(SOURCE_CPP
+	Global.cpp
+	Expression.cpp
+	ArrayType.cpp
+	Operations.cpp
+	RecordType.cpp
+	SimpleType.cpp
+	SymbolTable.cpp
+	Type.cpp
+	)
+
 
 set(calc_srcs
-  main.cpp
-  Expression.hpp
-  Type.hpp
-  #  symbol_table.hpp
-  #symbol_table.cpp
+  main.cpp               
+  ${HEADER_HPP}
+  ${SOURCE_CPP}
   ${BISON_Parser_OUTPUTS}
   ${FLEX_Scanner_OUTPUTS}
 )
